Some changes in this shit

--- a/.env
+++ b/.env
@@ -11,17 +11,17 @@ SOAP_TOTAL_TICKETLIST = '<soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap
 NOMAD_SERVER_URL = 'http://192.168.0.15:3856'
 #'http://10.10.111.114:3856'
 
-NOMAD_HOST='10.10.111.114'
+NOMAD_HOST='localhost'
 NOMAD_PORT=3306
-NOMAD_USER='arsen'
+NOMAD_USER='root'
 NOMAD_PASS='root'
 NOMAD_DB = 'kgd'
 
 
 
-SIT_HOST='10.10.111.114'
+SIT_HOST='localhost'
 SIT_PORT = 3306
-SIT_USER='arsen'
+SIT_USER='root'
 SIT_PASS='root'
 SIT_DB = 'sitcenter_kgd'
 
@@ -29,8 +29,10 @@ MAIL_USER = '190103402@stu.sdu.edu.kz'
 MAIL_PASS = 'Dante1234'
 
 
-SERVER_UPDATE = 60000
-OPERATOR_UPDATE = 50000
-WINDOW_UPDATE = 50000
-TICKET_UPDATE = 50000
+SERVER_UPDATE = 6000
+OPERATOR_UPDATE = 5000
+WINDOW_UPDATE = 5000
+TICKET_UPDATE = 5000
+
+RESTART_TIME = '11:52'
 
