--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "nodemon index.js",
+    "dev": "nodemon src/index.js",
     "build": "babel src -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
